--- a/client/src/app/login/login.component.html
+++ b/client/src/app/login/login.component.html
@@ -13,6 +13,15 @@
 
   <form class="w-50 mx-auto mt-3" [formGroup]="userCredentials" (ngSubmit)="onSubmitUser()" #ref="ngForm">
 
+    <div>
+      <input type="radio" formControlName="loginType" id="user" value="user">
+      <label for="user">User</label>
+  
+      <input type="radio" formControlName="loginType" id="author" value="author">
+      <label for="author">Author</label>
+    </div>
+  
+
     <div class="mb-2">
       <label for="username" class="form-label h5 text-danger">Username</label>
       <input type="text" formControlName="username" id="username" class="form-control">
