--- a/client/src/app/read-more/read-more.component.html
+++ b/client/src/app/read-more/read-more.component.html
@@ -13,19 +13,25 @@
     </div>
 </div>
 
-<h3>Write a Review</h3>
-<form (ngSubmit)="submitReview()">
-    <div>
-        <label for="rating">Rating:</label>
-        <input type="number" id="rating" name="rating" [(ngModel)]="rating" min="1" max="5" required>
-    </div>
-    <div>
-        <label for="comment">Comment:</label>
-        <textarea id="comment" name="comment" [(ngModel)]="comment" rows="4" required></textarea>
-    </div>
-    
-    <button type="submit">Submit Review</button>
-</form>
+@if(isUser){
+    <h3>Write a Review</h3>
+    <form (ngSubmit)="submitReview()">
+        <div>
+            <label for="rating">Rating:</label>
+            <input type="number" id="rating" name="rating" [(ngModel)]="rating" min="1" max="5" required>
+        </div>
+        <div>
+            <label for="comment">Comment:</label>
+            <textarea id="comment" name="comment" [(ngModel)]="comment" rows="4" required></textarea>
+        </div>
+        
+        <button type="submit">Submit Review</button>
+    </form>
+}
+@else{
+
+}
+
 
 <h3>Reviews</h3>
 <ul>
@@ -34,5 +40,6 @@
         <p>Comment: {{ review.comment }}</p>
         <p>Created At:{{review.createdAt | date}}</p>
         <button type="button" (click)="deleteReview(review.articleId)">Delete</button>
+
     </li>
 </ul>
