--- a/client/src/app/user-profile/user-profile.component.html
+++ b/client/src/app/user-profile/user-profile.component.html
@@ -1,31 +1,10 @@
 <div class="fluid-container">
-
-
 <div class="containers text-end">
 
-    <p class="h5 text-light">Welcome,{{currentusername}}</p>
-    <p class="h5 text-light">{{currentemail}}</p>
-     <form *ngIf="isEditMode" [formGroup]="editForm" (ngSubmit)="onEditFormSubmit()">
-        <label>Username:</label>
-        <input type="text" formControlName="username">
-
-        <label>Email:</label>
-        <input type="email" formControlName="email">
-
-        <button type="btn" (click)="onEditFormSubmit()" style="color: green;border:2px solid green;">Save Changes</button>
-    </form>
-
-    <button class="edit-btn" (click)="toggleEditMode()" style="color: white;border: 2px solid black;">Edit Profile</button>
+    <p class="h5 text-dark">Welcome,{{currentusername}}</p>
+    <p class="h5 text-dark">{{currentemail}}</p>
+     
 </div>
-
-@if(!isUser){
-    <button routerLink="/add-article" class="mb-4" style="border: 2px solid black;">Add Article <a>Here</a></button>
-
-}
-@else{
-
-}
-
 
 <div class="container">
 
