--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -33,6 +33,7 @@
       <input type="email" formControlName="email" id="email" class="form-control">
       <div *ngIf="email?.invalid &&(email?.dirty||email?.touched||ref.submitted)">
         <p *ngIf="email?.errors?.['required']" class="text-danger">Email is required</p>
+        <p *ngIf="email?.errors?.['pattern']" class="text-danger">Email format not matched</p>
       </div>
     </div>
 
