--- a/client/src/app/user-profile/user-profile.component.css
+++ b/client/src/app/user-profile/user-profile.component.css
@@ -121,7 +121,7 @@ body{
 }
 
 .fluid-container{
-    background-image: url('https://img.freepik.com/free-vector/realistic-turquoise-glitter-background_23-2150040992.jpg?w=900&t=st=1706504477~exp=1706505077~hmac=c723730957990a3c4c91fe42d408a1188700e2c9cea5bc259d06e7b2ce8b4581');
+    /* background-image: url('https://img.freepik.com/free-vector/realistic-turquoise-glitter-background_23-2150040992.jpg?w=900&t=st=1706504477~exp=1706505077~hmac=c723730957990a3c4c91fe42d408a1188700e2c9cea5bc259d06e7b2ce8b4581'); */
  height: 100vh;
 }
 .genre{
