--- a/client/src/app/article-details/article-details.component.html
+++ b/client/src/app/article-details/article-details.component.html
@@ -1,8 +1,8 @@
 <h2 class="mb-2">Article Details-{{category}}</h2>
 
-<label for="filter" style="margin-right: 10px;font-size: 20px;">Filter by name:</label>
-<input type="text" style="border-radius: 10px;" id="filter" #nameInput placeholder="search here...">
-<button class="btn btn-primary mb-10" (click)="filterBy(nameInput)" style="padding-top: 0px;padding-bottom: 0px;">filter</button>
+<label for="filter">Filter by name:</label>
+<input type="text" id="filter" [(ngModel)]="searchQuery" placeholder="Search here...">
+<button class="btn btn-primary mb-10" (click)="filterArticles()">filter</button>
 
 
 <div class="fluid-container">
@@ -17,124 +17,13 @@
           </div>
           <div class="foot">
             <h6 class="card-subtitle mb-2 text-body-secondary">{{article?.username}}</h6>
-            <a (click)="navigateToReadMore(currentUsername,category,article._id)">Read More</a>
-            <!-- @if(!isUser) {
-              <button type="button" (click)="deleteArticle(article._id)">Delete</button>
-              <button type="button" (click)="editArticle(article)">Edit</button>
-          } 
-          @else{
-  
-          }     -->
+            <a (click)="navigateToReadMore(article._id)">Read More</a>
           </div>
         </div>
       </div>
     </div>
   </div>
 </div>
-
-
-<!-- @for(article of articles;track article){
-  <div class="card" style="width: 18rem;">
-    <div class="card-body">
-      <h5 class="card-title">{{article?.title}}</h5>
-      <img  height="200px" width="200px" [src]="article?.imageUrl">
-      <div class="justify align-content">
-        <p class="card-text my-3 h-10 " style="overflow: hidden;">{{article?.summary}}</p>
-      </div>
-
-      <div class="foot">
-        <h6 class="card-subtitle mb-2 text-body-secondary">{{article?.username}}</h6>
-        <a (click)="navigateToReadMore(currentUsername,category,article._id)">Read More</a>
-      </div>
-
-    </div>
-  </div>
-} -->
-
-<!-- <div class="container">
-  <div class="card-container">
-    <div class="card" style="width: 18rem;" *ngFor="let article of fictionArticles" >
-      <div class="card-body">
-        <h5 class="card-title">{{article.title}}</h5>
-        <img  height="200px" width="200px" [src]="article.imageUrl">
-        <div class="justify align-content">
-          <p class="card-text my-3 h-10 " style="overflow: hidden;">{{article.summary}}</p>
-        </div>
-  
-        <div class="foot">
-          <h6 class="card-subtitle mb-2 text-body-secondary">{{article.username}}</h6>
-          <a (click)="navigateToReadMore(currentUsername,category,article.id)">Read More</a>
-        </div>
-    </div>
-  </div>
-
-</div>
-
-<div class="container">
-  <div class="card-container">
-    <div class="card" style="width: 18rem;" *ngFor="let article of novelArticles" >
-      <div class="card-body">
-        <h5 class="card-title">{{article.title}}</h5>
-        <img  height="200px" width="200px" [src]="article.imageUrl">
-        <div class="justify align-content">
-          <p class="card-text my-3 h-10 " style="overflow: hidden;">{{article.summary}}</p>
-        </div>
-  
-        <div class="foot">
-          <h6 class="card-subtitle mb-2 text-body-secondary">{{article.username}}</h6>
-          <a (click)="navigateToReadMore(currentUsername,category,article.id)">Read More</a>
-        </div>
-    </div>
-  </div>
-
-</div> -->
-
-
-
-<!-- <div class="card-container" *ngIf="category==='fiction'"> -->
-  <!-- <div class="card" style="width: 18rem;" *ngFor="let article of articles;let i=index">
-    <div class="card-body">
-      <h5 class="card-title">{{article.title}}</h5>
-      <img  height="200px" width="200px" [src]="article.imageUrl">
-      <div class="justify align-content">
-        <p class="card-text my-3 h-10 " style="overflow: hidden;">{{article.summary}}</p>
-      </div>
-
-      <div class="foot">
-        <h6 class="card-subtitle mb-2 text-body-secondary">{{article.username}}</h6>
-        <a (click)="navigateToReadMore(currentUsername,category,article.id)">Read More</a>
-      </div>
-
-
-    </div>
-  </div> -->
-<!-- </div> -->
-
-<!-- <div class="card-container" *ngIf="category==='novel'">
-  <div class="card" style="width: 18rem;" *ngFor="let article of articles;let i=index">
-    <div class="card-body">
-      <h5 class="card-title">{{article?.title}}</h5>
-      <img   height="200px" width="200px" [src]="article?.imageUrl">
-      <p class="card-text">{{article?.summary}}</p>
-      <h6 class="card-subtitle mb-2 text-body-secondary">{{article?.username}}</h6>
-      <p><a (click)="navigateToReadMore(currentUsername,category,article.id)">Read More..</a></p>
-    </div>
-  </div>
-</div>
-
-
-<div class="card-container" *ngIf="category==='history'">
-  <div class="card" style="width: 18rem;" *ngFor="let article of articles;let i=index">
-    <div class="card-body">
-      <h5 class="card-title">{{article.title}}</h5>
-      <img  height="200px" width="200px" [src]="article.imageUrl">
-      <p class="card-text">{{article.summary}}</p>
-      <h6 class="card-subtitle mb-2 text-body-secondary">{{article.username}}</h6>
-
-      <p><a (click)="navigateToReadMore(currentUsername,category,article.id)">Read More..</a></p>
-    </div>
-  </div>
-</div> -->
 
 
 
