--- a/client/src/app/user-profile/user-profile.component.html
+++ b/client/src/app/user-profile/user-profile.component.html
@@ -1,8 +1,8 @@
 <div class="fluid-container">
 <div class="containers text-end">
 
-    <p class="h5 text-dark">Welcome,{{currentusername}}</p>
-    <p class="h5 text-dark">{{currentemail}}</p>
+    <p class="h5 text-dark">Welcome,{{currentUsername}}</p>
+    <p class="h5 text-dark">{{currentEmail}}</p>
      
 </div>
 
@@ -11,19 +11,19 @@
     <div class="card-1 display-flex">
         <h3>Fiction</h3>
         <p>Something imaginary or invented!!</p>
-        <button class="genre" (click)="navigateToArticleDetails(currentusername,'fiction')">Fiction</button>
+        <button class="genre" (click)="navigateToArticleDetails(currentUsername,'fiction')">Fiction</button>
     </div>
 
     <div class="card-2 display-flex">
         <h3>Novel</h3>
         <p>Something imaginary or invented</p>
-        <button  class="genre" (click)="navigateToArticleDetails(currentusername,'novel')">Novel</button>
+        <button  class="genre" (click)="navigateToArticleDetails(currentUsername,'novel')">Novel</button>
     </div>
 
     <div class="card-3 display-flex">
         <h3>History</h3>
         <p>Something imaginary or invented</p>
-        <button class="genre" (click)="navigateToArticleDetails(currentusername,'history')">History</button>
+        <button class="genre" (click)="navigateToArticleDetails(currentUsername,'history')">History</button>
     </div>
 
 </div>
