--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -1,53 +1,54 @@
 <div class="fluid-container">
+
   @if(duplicateUserStatus===true){
-    <p class="text-danger fs-2 text-center">User already existed</p>
-    }
-    @else{
+  <p class="text-white fs-2 text-center">User already existed</p>
+  }
+  @if(duplicateAuthorStatus===true){
+  <p class="text-white fs-2 text-center">Author already existed</p>
+  }
+
+  <p class="display-2 text-center text-success " style="font-weight:400;">REGISTER</p>
+
+  <div class="container">
     
-    }
+    <form class="w-50 mx-auto form mt-3" [formGroup]="registerForm" (ngSubmit)="onSubmit()" #ref="ngForm">
 
-<p class="display-2 text-center text-success " style="font-weight:400;">REGISTER</p>
-<div class="container">
-  <form class="w-50 mx-auto form mt-3" [formGroup]="registerForm" (ngSubmit)="onSubmit()" #ref="ngForm">
+      <div>
+        <input type="radio" formControlName="registerType" id="user" value="user">
+        <label for="user">User</label>
 
-    <div>
-      <input type="radio" formControlName="registerType" id="user" value="user">
-      <label for="user">User</label>
-  
-      <input type="radio" formControlName="registerType" id="author" value="author">
-      <label for="author">Author</label>
-    </div>
-
-    <div class="mb-2">
-      <label for="username" class="form-label h5">Username</label>
-      <input type="text" formControlName="username" id="username" class="form-control">
-      <div *ngIf="username?.invalid &&(username?.dirty||username?.touched||ref.submitted)">
-        <p *ngIf="username?.errors?.['required']" class="text-danger">Username is required</p>
-        <p *ngIf="username?.errors?.['minlength']" class="text-danger">MinLength is 5</p>
-        <p *ngIf="username?.errors?.['maxlength']" class="text-danger">MaxLength is 8</p>
+        <input type="radio" formControlName="registerType" id="author" value="author">
+        <label for="author">Author</label>
       </div>
-    </div>
 
-    <div class="mb-2">
-      <label for="email" class="form-label h5">Email</label>
-      <input type="email" formControlName="email" id="email" class="form-control">
-      <div *ngIf="email?.invalid &&(email?.dirty||email?.touched||ref.submitted)">
-        <p *ngIf="email?.errors?.['required']" class="text-danger">Email is required</p>
-        <p *ngIf="email?.errors?.['pattern']" class="text-danger">Email format not matched</p>
+      <div class="mb-2">
+        <label for="username" class="form-label h5">Username</label>
+        <input type="text" formControlName="username" id="username" class="form-control">
+        <div *ngIf="username?.invalid &&(username?.dirty||username?.touched||ref.submitted)">
+          <p *ngIf="username?.errors?.['required']" class="text-danger">Username is required</p>
+          <p *ngIf="username?.errors?.['minlength']" class="text-danger">MinLength is 5</p>
+          <p *ngIf="username?.errors?.['maxlength']" class="text-danger">MaxLength is 8</p>
+        </div>
       </div>
-    </div>
 
-    <div class="mb-2">
-      <label for="password" class="form-label h5">Password</label>
-      <input type="password" formControlName="password" id="password" class="form-control">
-      <div *ngIf="password?.invalid &&(password?.dirty||password?.touched||ref.submitted)">
-        <p *ngIf="password?.errors?.['required']" class="text-danger">Password is required</p>
+      <div class="mb-2">
+        <label for="email" class="form-label h5">Email</label>
+        <input type="email" formControlName="email" id="email" class="form-control">
+        <div *ngIf="email?.invalid &&(email?.dirty||email?.touched||ref.submitted)">
+          <p *ngIf="email?.errors?.['required']" class="text-danger">Email is required</p>
+          <p *ngIf="email?.errors?.['pattern']" class="text-danger">Email format not matched</p>
+        </div>
       </div>
-    </div>
 
-    
+      <div class="mb-2">
+        <label for="password" class="form-label h5">Password</label>
+        <input type="password" formControlName="password" id="password" class="form-control">
+        <div *ngIf="password?.invalid &&(password?.dirty||password?.touched||ref.submitted)">
+          <p *ngIf="password?.errors?.['required']" class="text-danger">Password is required</p>
+        </div>
+      </div>
 
-    @if(registerForm.get('registerType').value==='user'){
+      @if(registerForm.get('registerType').value==='user'){
       <div class="mb-2">
         <label for="dob" class="form-label h5">Date of Birth</label>
         <input type="date" formControlName="dob" id="dob" class="form-control">
@@ -55,14 +56,10 @@
           <p *ngIf="dob?.errors?.['required']" class="text-danger">Date of Birth is required</p>
         </div>
       </div>
-    }
-    @else{
+      }
 
-    }
+      <button class="btn btn-success d-block mx-auto">Register</button>
 
-    <button class="btn btn-success d-block mx-auto">Register</button>
-    <p class=" back text-center text-light h6">Already have an account? <a routerLink="/login">Login</a></p>
-
-  </form>
-</div>
+    </form>
+  </div>
 </div>
